fox_src_codecs = [
  'FX88591Codec.cpp',
  'FX88592Codec.cpp',
  'FX88593Codec.cpp',
  'FX88594Codec.cpp',
  'FX88595Codec.cpp',
  'FX88596Codec.cpp',
  'FX88597Codec.cpp',
  'FX88598Codec.cpp',
  'FX88599Codec.cpp',
  'FX885910Codec.cpp',
  'FX885911Codec.cpp',
  'FX885913Codec.cpp',
  'FX885914Codec.cpp',
  'FX885915Codec.cpp',
  'FX885916Codec.cpp',
  'FXCP437Codec.cpp',
  'FXCP850Codec.cpp',
  'FXCP852Codec.cpp',
  'FXCP855Codec.cpp',
  'FXCP856Codec.cpp',
  'FXCP857Codec.cpp',
  'FXCP860Codec.cpp',
  'FXCP861Codec.cpp',
  'FXCP862Codec.cpp',
  'FXCP863Codec.cpp',
  'FXCP864Codec.cpp',
  'FXCP865Codec.cpp',
  'FXCP866Codec.cpp',
  'FXCP869Codec.cpp',
  'FXCP874Codec.cpp',
  'FXCP1250Codec.cpp',
  'FXCP1251Codec.cpp',
  'FXCP1252Codec.cpp',
  'FXCP1253Codec.cpp',
  'FXCP1254Codec.cpp',
  'FXCP1255Codec.cpp',
  'FXCP1256Codec.cpp',
  'FXCP1257Codec.cpp',
  'FXCP1258Codec.cpp',
  'FXKOI8RCodec.cpp',
  'FXUTF8Codec.cpp',
  'FXUTF16Codec.cpp',
  'FXUTF32Codec.cpp'
]

fox_src = fox_src_codecs + [
  'FX4Splitter.cpp',
  'FX7Segment.cpp',
  'FXAccelTable.cpp',
  'FXApp.cpp',
  'FXArray.cpp',
  'FXArrowButton.cpp',
  'FXAtomic.cpp',
  'FXAutoThreadStorageKey.cpp',
  'FXBarrier.cpp',
  'FXBMPIcon.cpp',
  'FXBMPImage.cpp',
  'FXBitmap.cpp',
  'FXBitmapFrame.cpp',
  'FXBitmapView.cpp',
  'FXButton.cpp',
  'FXBZFileStream.cpp',
  'FXCURCursor.cpp',
  'FXCalendar.cpp',
  'FXCalendarView.cpp',
  'FXCanvas.cpp',
  'FXCheckButton.cpp',
  'FXChoiceBox.cpp',
  'FXColorBar.cpp',
  'FXColorDialog.cpp',
  'FXColorList.cpp',
  'FXColorRing.cpp',
  'FXColors.cpp',
  'FXColorSelector.cpp',
  'FXColorWell.cpp',
  'FXColorWheel.cpp',
  'FXComboBox.cpp',
  'FXCompletion.cpp',
  'FXComplexf.cpp',
  'FXComplexd.cpp',
  'FXComposeContext.cpp',
  'FXComposite.cpp',
  'FXCondition.cpp',
  'FXConsole.cpp',
  'FXCursor.cpp',
  'FXDataTarget.cpp',
  'FXDate.cpp',
  'FXDC.cpp',
  'FXDCPrint.cpp',
  'FXDCWindow.cpp',
  'FXDDSIcon.cpp',
  'FXDDSImage.cpp',
  'FXDLL.cpp',
  'FXDebugTarget.cpp',
  'FXDelegator.cpp',
  'FXDial.cpp',
  'FXDialogBox.cpp',
  'FXDictionary.cpp',
  'FXDir.cpp',
  'FXDirBox.cpp',
  'FXDirDialog.cpp',
  'FXDirList.cpp',
  'FXDirSelector.cpp',
  'FXDirVisitor.cpp',
  'FXDirWatch.cpp',
  'FXDispatcher.cpp',
  'FXDisplay.cpp',
  'FXDockBar.cpp',
  'FXDockSite.cpp',
  'FXDockHandler.cpp',
  'FXDockTitle.cpp',
  'FXDocument.cpp',
  'FXDragCorner.cpp',
  'FXDrawable.cpp',
  'FXDriveBox.cpp',
  'FXEventDispatcher.cpp',
  'FXEventLoop.cpp',
  'FXException.cpp',
  'FXEXEIcon.cpp',
  'FXEXEImage.cpp',
  'FXExpression.cpp',
  'FXExtentd.cpp',
  'FXExtentf.cpp',
  'FXFile.cpp',
  'FXFileAssociations.cpp',
  'FXFileDialog.cpp',
  'FXFileList.cpp',
  'FXFileProgressDialog.cpp',
  'FXFileSelector.cpp',
  'FXFileStream.cpp',
  'FXFoldingList.cpp',
  'FXFont.cpp',
  'FXFontDialog.cpp',
  'FXFontSelector.cpp',
  'FXFrame.cpp',
  'FXGIFCursor.cpp',
  'FXGIFIcon.cpp',
  'FXGIFImage.cpp',
  'FXGLCanvas.cpp',
  'FXGLContext.cpp',
  'FXGLObject.cpp',
  'FXGLViewer.cpp',
  'FXGLVisual.cpp',
  'FXGauge.cpp',
  'FXGradientBar.cpp',
  'FXGroupBox.cpp',
  'FXGZFileStream.cpp',
  'FXhalf.cpp',
  'FXHash.cpp',
  'FXHeader.cpp',
  'FXHorizontalFrame.cpp',
  'FXICOIcon.cpp',
  'FXICOImage.cpp',
  'FXIFFIcon.cpp',
  'FXIFFImage.cpp',
  'FXIcon.cpp',
  'FXIconCache.cpp',
  'FXIconList.cpp',
  'FXIconSource.cpp',
  'FXId.cpp',
  'FXImage.cpp',
  'FXImageFrame.cpp',
  'FXImageView.cpp',
  'FXInputDialog.cpp',
  'FXINI.cpp',
  'FXINIFile.cpp',
  'FXIO.cpp',
  'FXIOBuffer.cpp',
  'FXIODevice.cpp',
  'FXJP2Icon.cpp',
  'FXJP2Image.cpp',
  'FXJPGIcon.cpp',
  'FXJPGImage.cpp',
  'FXJSON.cpp',
  'FXJSONFile.cpp',
  'FXJSONString.cpp',
  'FXKnob.cpp',
  'FXLabel.cpp',
  'FXLFQueue.cpp',
  'FXList.cpp',
  'FXListBox.cpp',
  'FXLocale.cpp',
  'FXMDIButton.cpp',
  'FXMDIChild.cpp',
  'FXMDIClient.cpp',
  'FXMainWindow.cpp',
  'FXMappedFile.cpp',
  'FXMat2d.cpp',
  'FXMat2f.cpp',
  'FXMat3d.cpp',
  'FXMat3f.cpp',
  'FXMat4d.cpp',
  'FXMat4f.cpp',
  'FXMatrix.cpp',
  'FXMemoryStream.cpp',
  'FXMenuBar.cpp',
  'FXMenuButton.cpp',
  'FXMenuCaption.cpp',
  'FXMenuCascade.cpp',
  'FXMenuCheck.cpp',
  'FXMenuRadio.cpp',
  'FXMenuCommand.cpp',
  'FXMenuPane.cpp',
  'FXMenuSeparator.cpp',
  'FXMenuTitle.cpp',
  'FXMessageBox.cpp',
  'FXMessageChannel.cpp',
  'FXMetaClass.cpp',
  'FXMutex.cpp',
  'FXObject.cpp',
  'FXObjectList.cpp',
  'FXOptionMenu.cpp',
  'FXPCXIcon.cpp',
  'FXPCXImage.cpp',
  'FXPNGIcon.cpp',
  'FXPNGImage.cpp',
  'FXPPMIcon.cpp',
  'FXPPMImage.cpp',
  'FXPacker.cpp',
  'FXParseBuffer.cpp',
  'FXPath.cpp',
  'FXPicker.cpp',
  'FXPipe.cpp',
  'FXPopup.cpp',
  'FXPoint.cpp',
  'FXPrintDialog.cpp',
  'FXProcess.cpp',
  'FXProgressBar.cpp',
  'FXProgressDialog.cpp',
  'FXPtrList.cpp',
  'FXPtrQueue.cpp',
  'FXQuatd.cpp',
  'FXQuatf.cpp',
  'FXRASIcon.cpp',
  'FXRASImage.cpp',
  'FXRGBIcon.cpp',
  'FXRGBImage.cpp',
  'FXRadioButton.cpp',
  'FXRandom.cpp',
  'FXRangef.cpp',
  'FXRanged.cpp',
  'FXRangeSlider.cpp',
  'FXReactor.cpp',
  'FXReadWriteLock.cpp',
  'FXRealSlider.cpp',
  'FXRealSpinner.cpp',
  'FXRecentFiles.cpp',
  'FXRectangle.cpp',
  'FXRegion.cpp',
  'FXRegistry.cpp',
  'FXReplaceDialog.cpp',
  'FXReverseDictionary.cpp',
  'FXRex.cpp',
  'FXRootWindow.cpp',
  'FXRuler.cpp',
  'FXRulerView.cpp',
  'FXScopedThread.cpp',
  'FXScrollArea.cpp',
  'FXScrollBar.cpp',
  'FXScrollPane.cpp',
  'FXScrollWindow.cpp',
  'FXSearchDialog.cpp',
  'FXSemaphore.cpp',
  'FXSemaQueue.cpp',
  'FXSeparator.cpp',
  'FXSettings.cpp',
  'FXShell.cpp',
  'FXShutter.cpp',
  'FXSize.cpp',
  'FXSlider.cpp',
  'FXSocket.cpp',
  'FXSpinner.cpp',
  'FXSpinLock.cpp',
  'FXSpheref.cpp',
  'FXSphered.cpp',
  'FXSplashWindow.cpp',
  'FXSplitter.cpp',
  'FXSpring.cpp',
  'FXStat.cpp',
  'FXStatusBar.cpp',
  'FXStatusLine.cpp',
  'FXStream.cpp',
  'FXString.cpp',
  'FXStringDictionary.cpp',
  'FXSwitcher.cpp',
  'FXSystem.cpp',
  'FXSystemTime.cpp',
  'FXSystemTimeFormat.cpp',
  'FXSystemTimeParse.cpp',
  'FXTGAIcon.cpp',
  'FXTGAImage.cpp',
  'FXTIFIcon.cpp',
  'FXTIFImage.cpp',
  'FXTabBar.cpp',
  'FXTabBook.cpp',
  'FXTabItem.cpp',
  'FXTable.cpp',
  'FXTaskGroup.cpp',
  'FXText.cpp',
  'FXTextCodec.cpp',
  'FXTextField.cpp',
  'FXThread.cpp',
  'FXThreadPool.cpp',
  'FXToggleButton.cpp',
  'FXToolBar.cpp',
  'FXToolBarGrip.cpp',
  'FXToolBarShell.cpp',
  'FXToolBarTab.cpp',
  'FXToolTip.cpp',
  'FXTopWindow.cpp',
  'FXTranslator.cpp',
  'FXTreeList.cpp',
  'FXTreeListBox.cpp',
  'FXTriStateButton.cpp',
  'FXUndoList.cpp',
  'FXURL.cpp',
  'FXVariant.cpp',
  'FXVariantArray.cpp',
  'FXVariantMap.cpp',
  'FXVec2d.cpp',
  'FXVec2f.cpp',
  'FXVec3d.cpp',
  'FXVec3f.cpp',
  'FXVec4d.cpp',
  'FXVec4f.cpp',
  'FXVerticalFrame.cpp',
  'FXVisual.cpp',
  'FXWEBPIcon.cpp',
  'FXWEBPImage.cpp',
  'FXWindow.cpp',
  'FXWizard.cpp',
  'FXWorker.cpp',
  'FXWSQueue.cpp',
  'FXXML.cpp',
  'FXXMLFile.cpp',
  'FXXMLString.cpp',
  'FXXBMIcon.cpp',
  'FXXBMImage.cpp',
  'FXXPMIcon.cpp',
  'FXXPMImage.cpp',
  'fxascii.cpp',
  'fxbase64.cpp',
  'fxbase85.cpp',
  'fxchar.cpp',
  'fxcpuid.cpp',
  'fxbmpio.cpp',
  'fxcompose.cpp',
  'fxddsio.cpp',
  'fxezquantize.cpp',
  'fxexeio.cpp',
  'fxfsquantize.cpp',
  'fxgifio.cpp',
  'fxiffio.cpp',
  'fxjpegio.cpp',
  'fxjp2io.cpp',
  'fxkeyboard.cpp',
  'fxkeysym.cpp',
  'fxleaps.cpp',
  'fxmath.cpp',
  'fxntp.cpp',
  'fxosver.cpp',
  'fxparsegeometry.cpp',
  'fxpcxio.cpp',
  'fxpngio.cpp',
  'fxppmio.cpp',
  'fxprintf.cpp',
  'fxpriv.cpp',
  'fxpsio.cpp',
  'fxrasio.cpp',
  'fxrgbio.cpp',
  'fxscanf.cpp',
  'fxstrtoll.cpp',
  'fxstrtoull.cpp',
  'fxstrtod.cpp',
  'fxtabbify.cpp',
  'fxtargaio.cpp',
  'fxtifio.cpp',
  'fxunicode.cpp',
  'fxutils.cpp',
  'fxwebpio.cpp',
  'fxwuquantize.cpp',
  'fxxbmio.cpp',
  'fxxpmio.cpp',
  'icons.cpp',
]

libfox = library('FOX-1.7', fox_src,
    include_directories : fox_include,
    dependencies : fox_deps,
    cpp_args : fox_defines + ['-DFOXDLL_EXPORTS'],
    install : true,
)

libfox_dep = declare_dependency(
    dependencies : fox_ext_deps,
    compile_args : fox_ext_defines,
    include_directories : fox_include,
    link_with : libfox
)

pkg.generate(libfox,
    filebase : 'fox',
    name : 'FOX',
    description : 'The FOX Toolkit',
    url : 'www.fox-toolkit.org',
)
